# vlarl-infra

./: README.md  pyproject.toml
src/vlarl_infra/: __init__.py  cli.py
src/vlarl_infra/client/: base_agent.py  websocket_worker_agent.py
src/vlarl_infra/envs/: __init__.py  base_env.py  dummy_env.py
src/vlarl_infra/envs/atari/: __init__.py  atari_env.py
src/vlarl_infra/envs/classic/: classic_env.py
src/vlarl_infra/envs/robomimic/: robomimic_env.py
src/vlarl_infra/envs/robomimic/env_meta/: square-img.json  transport-img.json
src/vlarl_infra/utils/: registration.py
src/vlarl_infra/utils/wrappers/: __init__.py  real_time_wrapper.py  remote_viewer_wrapper.py  success_record_wrapper.py
tests/: run_sqaure_env.sh  test_atari.py  test_env.py  test_mock_server.py  test_obs_type.py  test_remote_viewer_wrapper.py  test_robomimic.py  test_tree.py
